[package]
name = "bevy_mod_picking"
version = "0.17.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines", "rendering"]
resolver = "2"
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true


[workspace]
members = ["crates/*", "backends/*"]

[dependencies]
bevy_app = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_core = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_ecs = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_math = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_reflect = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_render = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_text = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', optional = true, default-features = false, features = [
    "default_font",
] }
bevy_ui = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', optional = true, default-features = false }
bevy_utils = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }
bevy_window = { git = 'https://github.com/ickshonpe/bevy/', rev = 'fe6982ac179ea7aae7ea8dc83e46130d864c3166', default-features = false }

bevy_eventlistener = { git = "https://github.com/JoJoJet/bevy_eventlistener/", rev = "607afb591e03f2def9892864cbf0cf36e2eb233d" }
bevy_egui = { optional = true, version = "0.23" }
bevy_rapier3d = { optional = true, version = "0.23" }

# Local
bevy_picking_core = { path = "crates/bevy_picking_core", version = "0.17" }
bevy_picking_input = { path = "crates/bevy_picking_input", version = "0.17" }
bevy_picking_selection = { optional = true, path = "crates/bevy_picking_selection", version = "0.17" }
bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight", version = "0.17" }
bevy_picking_raycast = { optional = true, path = "backends/bevy_picking_raycast", version = "0.17" }
bevy_picking_ui = { optional = true, path = "backends/bevy_picking_ui", version = "0.17" }
bevy_picking_rapier = { optional = true, path = "backends/bevy_picking_rapier", version = "0.17" }
bevy_picking_sprite = { optional = true, path = "backends/bevy_picking_sprite", version = "0.17" }
bevy_picking_egui = { optional = true, path = "backends/bevy_picking_egui", version = "0.17" }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_gltf",
    "bevy_scene",
    "bevy_ui",
    "png",
    "ktx2",
    "zstd",
    "tonemapping_luts",
] }
bevy_mod_picking = { path = "" }

[features]
all = [
    "selection",
    "highlight",
    "debug",
    "backend_raycast",
    "backend_bevy_ui",
    "backend_rapier",
    "backend_sprite",
    "backend_egui",
]
default = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]
selection = [
    "bevy_picking_selection",
    "bevy_picking_input/selection",
    "bevy_picking_highlight/selection",
]
highlight = ["bevy_picking_highlight/pbr"]
debug = ["bevy_text", "bevy_ui/bevy_text"]
backend_raycast = ["bevy_picking_raycast"]
backend_rapier = ["bevy_picking_rapier", "bevy_rapier3d"]
backend_sprite = ["bevy_picking_sprite", "bevy_picking_highlight/sprite"]
backend_bevy_ui = ["bevy_picking_ui", "bevy_ui"]
backend_egui = ["bevy_picking_egui", "bevy_egui"]

[[example]]
name = "rapier"
path = "examples/rapier.rs"
required-features = ["backend_rapier"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["backend_egui"]

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"
required-features = ["backend_egui"]

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows.rs"
required-features = ["backend_egui"]

[[example]]
name = "virtual_pointer"
path = "examples/virtual_pointer.rs"
required-features = ["backend_egui"]

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["backend_egui"]
