[package]
name = "bevy_picking_input"
version = "0.17.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_ecs = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_hierarchy = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_input = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_math = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_reflect = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_render = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_utils = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }
bevy_window = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false }

bevy_picking_core = { path = "../bevy_picking_core", version = "0.17" }
bevy_picking_selection = { optional = true, path = "../bevy_picking_selection", version = "0.17" }

[features]
selection = ["bevy_picking_selection"]
